--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,8 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Project Font */
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: "Karla", sans-serif;
+    background-color: #ffffff;
 }
