--- a/resources/css/views/login.css
+++ b/resources/css/views/login.css
@@ -51,42 +51,6 @@ body {
     }
 }
 
-.login-wrapper label {
-    font-size: 15px;
-    font-weight: bold;
-    color: #000000;
-}
-
-.login-wrapper .form-control {
-    /*border: 10px; /*#838383;*/
-    border-color: #b0adad;
-    border-radius: 10px;
-    padding: 9px 1rem;
-    min-height: 50px;
-    font-size: 18px;
-    font-weight: normal;
-}
-
-.login-wrapper .form-control::-webkit-input-placeholder {
-    color: #b0adad;
-}
-
-.login-wrapper .form-control::-moz-placeholder {
-    color: #0a0a0a;
-}
-
-.login-wrapper .form-control:-ms-input-placeholder {
-    color: #0a0a0a;
-}
-
-.login-wrapper .form-control::-ms-input-placeholder {
-    color: #0a0a0a;
-}
-
-.login-wrapper .form-control::placeholder {
-    color: #b0adad;
-}
-
 .login-wrapper .login-btn {
     padding: 8px 20px;
     border-radius: 10px;
@@ -94,6 +58,7 @@ body {
     font-weight: bold;
     color: rgb(255, 255, 255);
     margin-bottom: 15px;
+    width: 100%;
 }
 
 .login-wrapper .login-btn:hover {
