--- a/resources/css/views/home.css
+++ b/resources/css/views/home.css
@@ -1,4 +1,23 @@
 
+.home-page {
+    width: 80%;
+    margin: 5rem auto;
+}
+
+.home-page .trust-us {
+    margin-bottom: 4rem;
+}
+
+.home-page .trust-us .description {
+    font-size: 2.8rem;
+    margin-bottom: 0.5rem;
+}
+
+.home-page .trust-us .author {
+    font-size: 1.5rem;
+}
+
+
 #img-home{
     display: block;
     max-width: 100%;
@@ -40,5 +59,27 @@
     display: block;
     }
 
+/* Small devices */
+@media screen and (max-width: 768px) {
+    .home-page {
+        width: 90%;
+        margin: 4rem auto;
+    }
 
+    .home-page .trust-us {
+        margin-bottom: 2rem;
+    }
+
+    .home-page .trust-us .description {
+        font-size: 2rem;
+    }
+
+    .home-page .trust-us .author {
+        font-size: 1.2rem;
+    }
+
+    #binance-icon {
+        width: 200px;
+    }
+}
 
