--- a/resources/css/views/cart.css
+++ b/resources/css/views/cart.css
@@ -13,8 +13,9 @@
 
 .cart-page .content {
     display: flex;
-    gap: 4rem;
     justify-content: space-between;
+    flex-direction: row;
+    gap: 4rem;
     margin-top: 3rem;
 }
 
@@ -52,7 +53,18 @@
         margin: 2rem auto 3.5rem auto;
     }
 
-    /* .nfts-container {
-        grid-template-columns: repeat(auto-fit, minmax(145px, 1fr));
-    } */
+    .cart-page .content {
+        flex-direction: column;
+        justify-content: center;
+        gap: 3rem;
+    }
+
+    .cart-page .content .cart-items {
+        width: 100%;
+    }
+
+    .cart-page .content .cart-info {
+        width: 100%;
+    }
+
 }
